dashboard apis added
